--- a/fitnesscare/package.json
+++ b/fitnesscare/package.json
@@ -2,6 +2,7 @@
   "name": "react",
   "version": "1.0.0",
   "description": "React example starter project",
+  "proxy": "http://localhost:8000",
   "keywords": [
     "react",
     "starter"
